MDEV-17434 EXTRACT(DAY FROM negative_time) returns wrong result